--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
@@ -49,6 +49,9 @@
                     Foreground="#80FFFFFF"
                     Margin="0,4,0,0"
                     FontWeight="SemiLight"
+                    MaxLines="1"
+                    TextWrapping="NoWrap"
+                    TextTrimming="CharacterEllipsis"
                     x:Name="InfoBlock"/>
             </StackPanel>
         </Grid>
