--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
@@ -19,7 +19,7 @@
                 x:Uid="GuideIntroduction1"/>
             <LineBreak/>
             <Run 
-                Text="The language itself replicates a Touring machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them."
+                Text="The language replicates a Turing machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them."
                 x:Uid="GuideIntroduction2"/>
             <LineBreak/>
             <Run 
