Fixed a typo in the user guide

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/SimpleLoopCodePreviewControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/SimpleLoopCodePreviewControl.xaml
@@ -149,7 +149,7 @@
                     <Run 
                         Text="      &lt;"
                         Foreground="#FFDDDDDD"/><Run 
-                        Text="+"
+                        Text="-"
                         Foreground="White"/>
                     <Run 
                         Text="Decrement the first cell"
