--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -250,6 +250,13 @@
         <Setter Property="Foreground" Value="{ThemeResource TextControlForeground}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="SelectionHighlightColor" Value="{ThemeResource TextControlSelectionHighlightColor}" />
+        <Setter Property="SelectionHighlightColorWhenNotFocused">
+            <Setter.Value>
+                <SolidColorBrush 
+                    Color="{ThemeResource SystemAccentColor}"
+                    Opacity="0.8"/>
+            </Setter.Value>
+        </Setter>
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
