--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
@@ -4,9 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:iconBoxToolkit="using:Brainf_ck_sharp_UWP.UserControls.IconBoxToolkit"
     xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
     xmlns:customControls="using:Brainf_ck_sharp_UWP.UserControls.CustomControls"
+    xmlns:controls="using:RafaelWare.UWP.Toolkit.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -81,7 +81,7 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <iconBoxToolkit:IconBox 
+                    <controls:IconBox 
                         Data="{StaticResource StoreLogo}"
                         Margin="0,8,8,8"/>
                     <TextBlock
