Removed legacy APIs

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -53,8 +53,7 @@
             <!--Title placeholder-->
             <Grid 
                 Grid.Row="0"
-                Height="32"
-                Visibility="{x:Bind ViewModel.DesktopMode, FallbackValue=Collapsed}">
+                Height="32">
                 
                 <!--App title-->
                 <TextBlock
