--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -4,15 +4,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:brushes="using:UICompositionAnimations.Brushes"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
     Height="24">
 
     <!--Visual tree-->
-    <Grid 
-        Background="{ThemeResource SystemControlHighlightAltListAccentMediumBrush}"
-        x:Name="RootGrid">
+    <Grid>
+        <Grid.Background>
+            <brushes:CustomAcrylicBrush
+                x:Name="RootGridBackgroundBrush"
+                Mode="HostBackdrop"
+                Tint="{StaticResource SystemAccentColor}"
+                TintMix="0.9"
+                NoiseTextureUri="/Assets/Misc/noise.png"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
@@ -31,11 +38,8 @@
                 <VisualState x:Name="ConsoleState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="RootGrid.Background"
-                            Value="{ThemeResource SystemControlHighlightAltListAccentMediumBrush}"/>
-                        <Setter 
-                            Target="BreakpointErrorGrid.Background"
-                            Value="{ThemeResource SystemControlHighlightAltListAccentMediumBrush}"/>
+                            Target="RootGridBackgroundBrush.Tint"
+                            Value="{StaticResource SystemAccentColor}"/>
                         <Setter
                             Target="RowBlock.Visibility"
                             Value="Collapsed"/>
@@ -50,10 +54,7 @@
                 <VisualState x:Name="ConsoleErrorState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="RootGrid.Background"
-                            Value="#FFCA5100"/>
-                        <Setter 
-                            Target="BreakpointErrorGrid.Background"
+                            Target="RootGridBackgroundBrush.Tint"
                             Value="#FFCA5100"/>
                         <Setter
                             Target="RowBlock.Visibility"
@@ -72,11 +73,8 @@
                 <VisualState x:Name="IDEState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="RootGrid.Background"
-                            Value="{ThemeResource SystemControlHighlightAltListAccentMediumBrush}"/>
-                        <Setter 
-                            Target="BreakpointErrorGrid.Background"
-                            Value="{ThemeResource SystemControlHighlightAltListAccentMediumBrush}"/>
+                            Target="RootGridBackgroundBrush.Tint"
+                            Value="{StaticResource SystemAccentColor}"/>
                         <Setter
                             Target="RowBlock.Visibility"
                             Value="Visible"/>
@@ -91,10 +89,7 @@
                 <VisualState x:Name="IDEErrorState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="RootGrid.Background"
-                            Value="#FFA04A09"/>
-                        <Setter 
-                            Target="BreakpointErrorGrid.Background"
+                            Target="RootGridBackgroundBrush.Tint"
                             Value="#FFA04A09"/>
                         <Setter
                             Target="RowBlock.Visibility"
