--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -29,6 +29,16 @@
     <SolidColorBrush x:Key="ElementsWideLightBrush"/>
     <SolidColorBrush x:Key="WideLightBrushDarkShadeBackground"/>
     
+    <!--Virtual keyboard brush-->
+    <brushes:CustomAcrylicBrush
+        x:Key="KeyboardBrush"
+        Mode="HostBackdrop"
+        FallbackColor="#FF121212"
+        UnsupportedEffectFallbackColor="#FF121212"
+        Tint="#FF101010"
+        TintMix="0.9"
+        NoiseTextureUri="/Assets/Misc/noise.png"/>
+    
     <!--CommandBar/ContextMenu brush-->
     <brushes:CustomAcrylicBrush
         x:Key="InAppGrayAcrylicBrush"
