--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -187,8 +187,7 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                Grid.ColumnSpan="2"
-                                Grid.RowSpan="1" />
+                                Grid.ColumnSpan="2" />
                         <ContentPresenter x:Name="HeaderContentPresenter"
                                           x:DeferLoadStrategy="Lazy"
                                           Visibility="Collapsed"
