Minor UI tweaks to the user guide

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/OperatorDescriptionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/OperatorDescriptionControl.xaml
@@ -14,7 +14,8 @@
         BorderThickness="2"
         BorderBrush="#20FFFFFF">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"
+                              MinWidth="40"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
