--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardSectionHeaderButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardSectionHeaderButton.xaml
@@ -18,9 +18,6 @@
             <VisualStateGroup>
                 <VisualState x:Name="Default">
                     <VisualState.Setters>
-                        <Setter 
-                            Target="SelectedRectangle.Opacity"
-                            Value="0"/>
                         <Setter
                             Target="IconBlock.Foreground"
                             Value="White"/>
@@ -31,9 +28,6 @@
                 </VisualState>
                 <VisualState x:Name="Selected">
                     <VisualState.Setters>
-                        <Setter 
-                            Target="SelectedRectangle.Opacity"
-                            Value="1"/>
                         <Setter
                             Target="IconBlock.Foreground"
                             Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
@@ -42,20 +36,25 @@
                             Value="Black"/>
                     </VisualState.Setters>
                 </VisualState>
+                <VisualState x:Name="Disabled">
+                    <VisualState.Setters>
+                        <Setter
+                            Target="IconBlock.Foreground"
+                            Value="{StaticResource ButtonDisabledForegroundThemeBrush}"/>
+                        <Setter
+                            Target="RootGrid.Background"
+                            Value="Transparent"/>
+                    </VisualState.Setters>
+                </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
         <!--Root-->
         <Grid x:Name="RootGrid">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="1"/>
-            </Grid.RowDefinitions>
 
             <!--Wide light border-->
             <Border
                 x:Name="BackgroundBorder"
-                Grid.RowSpan="2"
                 Background="{StaticResource ElementsWideLightBrush}"
                 Opacity="0"/>
 
@@ -63,23 +62,15 @@
             <Border
                 x:Name="LightBorder"
                 BorderThickness="1"
-                BorderBrush="{StaticResource BorderLightBrush}"
-                Grid.Row="0"
-                Grid.RowSpan="2"/>
+                BorderBrush="{StaticResource BorderLightBrush}"/>
 
             <!--Icon-->
             <TextBlock
-                Grid.Row="0"
                 Style="{StaticResource FontIconTextBlockStyle}"
                 Text="&#xEC4E;"
                 x:Name="IconBlock"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"/>
-
-            <!--Selected canvas-->
-            <Canvas x:Name="SelectedRectangle"
-                    Grid.Row="1"
-                    Background="{ThemeResource SystemControlHighlightAccentBrush}"/>
         </Grid>
     </Button>
 </UserControl>
