--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/CodeSamplesGuideControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/CodeSamplesGuideControl.xaml
@@ -30,12 +30,10 @@
             <Run 
                 Text="A good strategy to learn how to code in Brainf*ck, as with everything else, is to start from simpler and smaller programs and to make them more complex along the way."
                 x:Uid="GuideSamples1"/>
-            <LineBreak/>
-            <Run 
+            <LineBreak/><Run 
                 Text="For example, a common operation is to reset the value of the current cell, whatever it may be."
                 x:Uid="GuideSamples2"/>
-            <LineBreak/>
-            <Run 
+            <LineBreak/><Run 
                 Text="A simple loop can be used in this case:"
                 x:Uid="GuideSamples3"/>
         </TextBlock>
@@ -44,8 +42,7 @@
         <controls:DropShadowPanel 
             Style="{StaticResource DropShadowContainerStyle}"
             Margin="0,16,0,0">
-            <codeSamples:ResetLoopCodePreviewControl 
-                HorizontalAlignment="Left"/>
+            <codeSamples:ResetLoopCodePreviewControl HorizontalAlignment="Left"/>
         </controls:DropShadowPanel>
         
         <!--Second description-->
@@ -56,9 +53,8 @@
             <Run 
                 Text="In many situations it is useful to make a copy of the current cell, to be able to perform some operations with its value, without losing track of the initial state of the memory cell."
                 x:Uid="GuideSamples4"/>
-            <LineBreak/>
-            <Run 
-                Text="To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell."
+            <LineBreak/><Run 
+                Text="To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell:"
                 x:Uid="GuideSamples5"/>
         </TextBlock>
         
@@ -66,8 +62,7 @@
         <controls:DropShadowPanel 
             Style="{StaticResource DropShadowContainerStyle}"
             Margin="0,16,0,0">
-            <codeSamples:SimpleLoopCodePreviewControl 
-                HorizontalAlignment="Left"/>
+            <codeSamples:SimpleLoopCodePreviewControl HorizontalAlignment="Left"/>
         </controls:DropShadowPanel>
 
         <!--Advanced sample description-->
@@ -76,24 +71,18 @@
             TextWrapping="WrapWholeWords"
             FontSize="14">
             <Run 
-                Text="All these techniques can be combined to write more complex programs."
+                Text="All these techniques can be combined to write more complex programs. A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read."
                 x:Uid="GuideSamples6"/>
-            <LineBreak/>
-            <Run 
-                Text="A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read."
+            <LineBreak/><Run 
+                Text="In this example, to print the word &quot;Hello&quot; two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the &quot;H&quot; character:"
                 x:Uid="GuideSamples7"/>
-            <LineBreak/>
-            <Run 
-                Text="In this example, to print the word &quot;Hello&quot; two loops will be used to set two cells to values closer to the letters that will be printed. It's definitely better to use a similar approach than to repeating the + operator 72 times to print the &quot;H&quot; character."
-                x:Uid="GuideSamples8"/>
         </TextBlock>
 
         <!--Advanced loop sample-->
         <controls:DropShadowPanel 
             Style="{StaticResource DropShadowContainerStyle}"
             Margin="0,16,0,0">
-            <codeSamples:PrintHelloCodePreviewControl 
-                HorizontalAlignment="Left"/>
+            <codeSamples:PrintHelloCodePreviewControl HorizontalAlignment="Left"/>
         </controls:DropShadowPanel>
 
         <TextBlock
@@ -102,7 +91,7 @@
             FontSize="14">
             <Run 
                 Text="This script will set the cells #2 and #3 to values closer to the characters that will be printed by the program, so that less operations will be needed to get to the actual values the code wants to display to the user."
-                x:Uid="GuideSamples9"/>
+                x:Uid="GuideSamples8"/>
         </TextBlock>
     </StackPanel>
 </UserControl>
